--- a/Salud/HomeViewController.xib
+++ b/Salud/HomeViewController.xib
@@ -13,6 +13,7 @@
                 <outlet property="closeSessionButton" destination="Yh7-mD-6eH" id="tXm-q7-wtS"/>
                 <outlet property="emailLabel" destination="Fw9-Ph-r7N" id="fvS-g5-u8T"/>
                 <outlet property="providerLabel" destination="SJh-d7-sbw" id="QsL-X2-cjq"/>
+                <outlet property="tiendaButton" destination="VZy-Ma-6r4" id="Q40-Ce-L9T"/>
                 <outlet property="view" destination="iN0-l3-epB" id="oS3-FP-8hG"/>
             </connections>
         </placeholder>
@@ -22,7 +23,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gr4-lK-SCQ">
-                    <rect key="frame" x="16" y="75" width="361" height="136"/>
+                    <rect key="frame" x="16" y="75" width="361" height="232"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fw9-Ph-r7N">
                             <rect key="frame" x="0.0" y="0.0" width="361" height="40"/>
@@ -36,8 +37,21 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yh7-mD-6eH">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ijr-Qk-1wr">
                             <rect key="frame" x="0.0" y="96" width="361" height="40"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" title="Perfil"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZy-Ma-6r4">
+                            <rect key="frame" x="0.0" y="144" width="361" height="40"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" title="Tienda"/>
+                            <connections>
+                                <action selector="tiendaButtonAction:" destination="-1" eventType="touchUpInside" id="ASo-NQ-FZZ"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yh7-mD-6eH">
+                            <rect key="frame" x="0.0" y="192" width="361" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="goY-dR-GbV"/>
                             </constraints>
